# reqsys-v2-enterprise-real

./: .coderabbit.yaml  .env.example  .gitignore  .gitlab-ci.yml  .reqsys-agent.json  AGENTS.md  CHANGELOG-pr145-clean.md  CHANGELOG.md  CHECKLIST_OPERACIONAL_ATUALIZACAO_CONTINUA.md  Dockerfile.fly  README.md  docker-compose.dev.yml  docker-compose.dotnet.yml  docker-compose.override.dev-no-kb.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  fly.toml  mkdocs.yml  package-lock.json  package.json  playwright.config.ts  requirements-docs.txt  sdd-dashboard.html
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  pull_request_template.md  self-hosted-runner-policy.json
artifacts/: README.md  fly-enterprise-sync-validation.json  prod-readiness-audit.json  prod-readiness-audit.md  prod-readiness-human-evidence.json  ux-empty-state-advisory-governance.json
audit/: post-merge-ci-fix-2026-06-23.json  (+4 more)
docs/ollama-local-gateway/bootstrap-files/: .env.example  .gitignore  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
docs/ollama-local-gateway/bootstrap-files/.github/: CODEOWNERS  pull_request_template.md
docs/ollama-local-gateway/bootstrap-files/.github/workflows/: ci.yml  governance.yml  sync-from-reqsys.yml
docs/ollama-local-gateway/bootstrap-files/docs/: ADR-001-provider-local-ollama.md
docs/ollama-local-gateway/bootstrap-files/src/reqsys_ollama_gateway/: __init__.py  app.py  audit.py  config.py  main.py  ollama_client.py  schemas.py
docs/ollama-local-gateway/bootstrap-files/tests/: test_audit.py  test_chat_contract.py  test_health.py
(+3180 files in other folders)
